Do not try to import native textures with offscreen platform plugin

Native texture import implementations rely on platform specific APIs
which may not be working with offscreen platform plugin.

Pick-to: 6.8
Fixes: QTBUG-132682
Change-Id: I6d68dacaa54fa42c8464c3ba2d29a879dad8a1e5
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit a9944c7c0a704ded9fcfb9365688c240dc1303e0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>